agregamos 3 archivos html y un css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     
 
-
-
+<h1>hola mundo</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nostrum nesciunt iusto porro sapiente quidem culpa dolorum perspiciatis, eveniet ratione odit maiores enim est omnis nam asperiores, blanditiis eius voluptatibus!</p>
 
 
     
